addde event listeners
added event listeners

--- a/color_game.html
+++ b/color_game.html
@@ -7,8 +7,11 @@
 <link rel="stylesheet" type="text/css" href="color_game.css">
 </head>
 <body>
-    <h1>RGB COLOR GAME</h1>
+    <h1> <span id="colorDisplay">RGB</span> COLOR GAME</h1>
     <!-- containers for the squares you click on -->
+    <div>
+        <span id="message"></span>
+    </div>
     <div class="container">
         <div class="square"></div>
         <div class="square"></div>
