new color button
created a function that resets the board when new color is clicked on

--- a/color_game.html
+++ b/color_game.html
@@ -7,10 +7,13 @@
 <link rel="stylesheet" type="text/css" href="color_game.css">
 </head>
 <body>
-    <h1> <span id="colorDisplay">RGB</span> COLOR GAME</h1>
+    <h1> the great <br> </brea><span id="colorDisplay">RGB</span><br>guess the color</h1>
     <!-- containers for the squares you click on -->
-    <div>
+    <div id="menu">
+        <button id="newcolor">new color</button>
         <span id="message"></span>
+        <button id="easy">easy</button>
+        <Button id="hard">hard</Button>
     </div>
     <div class="container">
         <div class="square"></div>
